# AnonGraph

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
notebooks/undirected/: Experiment_1_1_Timeout_Literature_Comparison.ipynb  Experiment_1_Comparison_of_Proposed_Algorithms.ipynb  Experiment_2_Figures.ipynb  Experiment_2_Literature_Comparison.ipynb  Experiment_4_closeness.ipynb  Experiment_Short_Term_Loss_Roles_Soft_Colors.ipynb  fuser.py
notebooks/undirected/cache/: 42_exp3_comp_enron_samples_data.pkl  42_exp3_figure_enron_samples_data.pkl  44_exp3_figure_ca_GRQC_samples_data.pkl  45_exp3_comp_enron_samples_data.pkl  55_exp3_figure_ca_GRQC_samples_data.pkl  55_exp3_figure_enron_samples_data.pkl  60_exp3_figure_ca_GRQC_samples_data.pkl  77_exp3_figure_enron_samples_data.pkl  base_exp3_figure_polbooks_samples_data.pkl  cc_closeness_synth.pkl  closeness_synth.pkl  exp3_comp_ca_samples_data.pkl  exp3_comp_enron_samples_data.pkl  exp3_comp_polbooks_samples_data.pkl  exp3_figure_ca_GRQC_samples_data.pkl  exp3_figure_enron_samples_data.pkl  exp3_figure_polbooks_samples_data.pkl  interval_ends_exp3_figure_ca_GRQC_samples_data.pkl  interval_ends_exp3_figure_enron_samples_data.pkl  interval_ends_exp3_figure_polbooks_samples_data.pkl  kanon_closeness_synth.pkl
src/anonymigraph/: utils.py
src/anonymigraph/anonymization/: __init__.py  configuration_model_anonymizer.py  method_k_degree_anonymity.py  method_nest_model.py  method_private_color_closeness.py  method_private_colors.py  method_pygmalion.py  (+4 more)
(+16 files in other folders)
