[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "py-project-toml"
authors = [{ name = "Jan Meißner", email = "philipp.meissner@rwth-aachen.de" }]
description = "Python Project for Graph Anonymization Technique"
readme = "README.md"
requires-python = ">=3.12.0"
dynamic = ["version"]
packages = [{ include = "anonymigraph", from = "src" }]

# Pinned dependencies for reproducibility
dependencies = [
    "numpy==2.1.3",
    "networkx==3.4.2",
    "numba==0.61.0",
    "scipy==1.15.1",
    "kmeans1d==0.4.0",
    "scikit-learn==1.6.1",
    "igraph==0.11.8",
    "optimal1dclustering==1.0.2"
]

[tool.flit.module]
name = "anonymigraph"

[project.optional-dependencies]
torch = ["torch==2.6.0"]
dev = ["black==23.3.0", "pre-commit==3.3.1"]
test = ["pytest==8.3.4", "pytest-cov==6.0.0"]
full = ["jupyter==1.1.1", "matplotlib==3.10.0", "pandas==2.2.3", "seaborn==0.13.2"]

[tool.black]
line-length = 120
fast = true

[tool.flake8]
max-line-length = 240
select = "F,E,W,B,B901,B902,B903"
exclude = [
    ".eggs",
    ".git",
    ".tox",
    "nssm",
    "obj",
    "out",
    "packages",
    "pywin32",
    "tests",
    "swagger_client",
]
ignore = ["E722", "B001", "W503", "E203", "W292"]

[tool.coverage.run]
source = ["anonymigraph"]
omit = ["src/anonymigraph/anonymization/_external/*"]
